--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
                     </div>
                 </div>
 
+
+             <div class="form__div form__div-email">
+    <label for="register-email" class="form__label-email">Correo Electrónico</label>
+    <input type="email" id="register-email" class="form__input form__input-email" required>
+</div>
                 <div class="form__div">
                     <div class="form__icon">
                         <i class='bx bx-lock' ></i>
@@ -93,7 +98,7 @@
                     </div>
                 </div>
 
-                <input type="submit" class="form__button" value="Registro">
+                <input type="submit" class="form__button form__button-register" value="Registro">
 
                 <div class="form__social">
                     <span class="form__social-text">Registro con</span>
