--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
 
-             <div class="form__div form__div-email">
+      <div class="form__div form__div-input-email">
     <label for="email" class="form__label-email">Correo Electrónico</label>
     <input type="email" id="email" class="form__input form__input-email" required>
 </div>
