--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <a href="#" class="form__forgot">Contraseña olvidada?</a>
 
-                <a href="inicio.html" class="form__toggle" onclick="toggleForms()">Iniciar sesión</a>
+                <a href="#" class="form__toggle" onclick="toggleForms()">Iniciar sesión</a>
 
                 <div class="form__social">
                     <span class="form__social-text">Iniciar sesión con</span>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
 
-               <a href="index.html" class="form__toggle" onclick="toggleForms()">Registro</a>
+               <a href="#" class="form__toggle" onclick="toggleForms()">Registro</a>
 
                 <div class="form__social">
                     <span class="form__social-text">Registro con</span>
