Update Pagina de pago.html

--- a/Pagina de pago.html
+++ b/Pagina de pago.html
@@ -124,7 +124,7 @@
       </div>
 
       <div class="package">
-        <h3>1 Paigna Web</h3>
+        <h3>1 Pagina Web</h3>
         <p>El contenido de este paquete es una página web personalizada al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente.Tienes un servicio tecnico 24/7.</p>
         <p>Precio: <span class="price">47,43$/45€</span></p>
         <a href="paypal1web.html" class="buy-now-button">Pagar ahora</a>
