--- a/inicio.html
+++ b/inicio.html
@@ -16,11 +16,13 @@
     }
 
     header {
-      background-color: #333;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  margin-right: 20px; 
+  box-sizing: border-box; 
+}
 
     header #logo {
       width: 100px;
