--- a/inicio.html
+++ b/inicio.html
@@ -15,14 +15,16 @@
       padding: 0;
     }
 
-    header {
+   header {
   background-color: #333;
   color: #fff;
   padding: 20px;
   text-align: center;
-  margin-right: 50px; 
+  margin-right: 0; 
+  width: 100%; 
   box-sizing: border-box; 
 }
+
 
     header #logo {
       width: 100px;
