--- a/index.html
+++ b/index.html
@@ -12,7 +12,33 @@
     <style>
         .form__register-mode {
             display: none;
-        }
+            }
+            
+    .form__div-input-email {
+        display: flex;
+        align-items: center;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        margin-bottom: 15px;
+        padding: 10px;
+    }
+
+    .form__div-input-email .form__icon {
+        margin-right: 10px;
+    }
+
+    .form__div-input-email .form__label-email {
+        display: none;
+    }
+
+    .form__div-input-email .form__input-email {
+        flex-grow: 1;
+        border: none;
+        outline: none;
+        font-size: 16px;
+        padding: 8px;
+    }
+
     </style>
 
     <title>ArreglosCiberseguridad</title>  
