--- a/consejos.html
+++ b/consejos.html
@@ -1,16 +1,73 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-     <link rel="shortcut icon" type="image/x-icon" href="logo2.png">
+    <link rel="shortcut icon" type="image/x-icon" href="logo2.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consejos Sobre La Ciberseguridad</title>
     <link rel="stylesheet" type="text/css" href="style3.css">
-    <script defer src="app.js"></script>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #333;
+            color: #fff;
+            margin: 0;
+        }
+
+        header {
+            background-color: #555;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        #consejos {
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: #444;
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .consejos-list {
+            list-style: none;
+            padding: 0;
+        }
+
+        .consejos-list li {
+            margin-bottom: 20px;
+        }
+
+        .boton-gris-fuerte {
+            display: block;
+            width: 120px;
+            margin: 20px auto;
+            padding: 10px;
+            text-align: center;
+            color: #fff;
+            background-color: #555;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .boton-gris-fuerte:hover {
+            background-color: #777;
+        }
+
+        footer {
+            background-color: #555;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+    </style>
 </head>
+
 <body>
     <header>
-        <h1>Consejos de Ciberseguridad</h1>
+        <h1 class="animate__animated animate__bounceIn">Consejos de Ciberseguridad</h1>
     </header>
 
     <section id="consejos">
@@ -48,7 +105,7 @@
             
     </section>
 
-    <a class="boton-azul-claro" href="inicio.html">Inicio</a>
+    <a class="boton-gris-fuerte" href="inicio.html">Inicio</a>
 
     <script src="app4.js"></script>
 
@@ -56,5 +113,6 @@
         <p>Derechos de autor Hugo Sánchez &copy; 2022. Todos los derechos reservados.</p>
     </footer>
 </body>
+
 </html>
 
