--- a/index.html
+++ b/index.html
@@ -39,6 +39,75 @@
         padding: 8px;
     }
 
+    .popup {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 300px;
+        max-width: 80%;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        z-index: 1000;
+    }
+
+    .popup-content {
+        padding: 20px;
+        text-align: center;
+    }
+
+    .close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 20px;
+        cursor: pointer;
+        color: #555;
+    }
+
+    .close:hover {
+        color: #333;
+    }
+
+    .popup h2 {
+        color: #333;
+        margin-bottom: 10px;
+    }
+
+    .popup p {
+        color: #555;
+        margin-bottom: 20px;
+    }
+
+    .popup label {
+        display: block;
+        margin-bottom: 10px;
+        color: #555;
+    }
+
+    .popup input {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 15px;
+        box-sizing: border-box;
+    }
+
+    .popup button {
+        background-color: #4CAF50;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+    .popup button:hover {
+        background-color: #45a049;
+    }
+
     </style>
 
     <title>ArreglosCiberseguridad</title>  
@@ -52,7 +121,7 @@
             <img src="authentication.svg" alt="" class="form__img">
 
             <form action="inicio.html" class="form__content" onsubmit="return validateForm('login');">
-                <h1 class="form__title">Iniciar sesión</h1>
+                <h1 class="form__title">Inicio de sesión</h1>
 
                 <div class="form__div form__div-one">
                     <div class="form__icon">
@@ -70,9 +139,9 @@
                         <i class='bx bx-envelope'></i>
                     </div>
                     <label for="email" class="form__label-email">Correo Electrónico</label>
-                    <input type="email" id="email" class="form__input form__input-email" required>
+                    <input type="email" id="email" class="form__input form__input-email" placeholder="      Correo electrónico" required>
                 </div>
-
+                
                 <div class="form__div">
                     <div class="form__icon">
                         <i class='bx bx-lock'></i>
@@ -119,7 +188,7 @@
                         <i class='bx bx-envelope'></i>
                     </div>
                     <label for="register-email" class="form__label-email">Correo Electrónico</label>
-                    <input type="email" id="register-email" class="form__input form__input-email" required>
+                    <input type="email" id="register-email" class="form__input form__input-email" placeholder="      Correo electrónico" required>
                 </div>
 
                 <div class="form__div">
@@ -146,6 +215,18 @@
                     <a href="#" class="form__social-icon"><i class='bx bxl-instagram' ></i></a>
                 </div>
             </form>
+        </div>
+    </div>
+
+
+    <div class="popup" id="verificationPopup">
+        <div class="popup-content">
+            <span class="close" onclick="closePopup()">&times;</span>
+            <h2>Verificación de Código</h2>
+            <p>Se envió un código de verificación a: <span id="popupEmail"></span></p>
+            <label for="verificationCode">Ingrese el código:</label>
+            <input type="text" id="verificationCode" required>
+            <button onclick="verifyCode()">Verificar</button>
         </div>
     </div>
 
@@ -194,5 +275,46 @@
         }
     </script>
     <script src="main.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const usernameInput = document.getElementById('username');
+            const passwordInputs = document.querySelectorAll(".form__input[type='password']");
+            const emailInput = document.getElementById('email');
+
+            usernameInput.addEventListener("input", () => {
+                const label = usernameInput.previousElementSibling;
+                label.style.opacity = usernameInput.value ? 0 : 1;
+            });
+
+            passwordInputs.forEach((input) => {
+                input.addEventListener("input", () => {
+                    const label = input.previousElementSibling;
+                    label.style.opacity = input.value ? 0 : 1;
+                });
+            });
+
+            emailInput.addEventListener("input", () => {
+                const label = emailInput.previousElementSibling;
+                label.style.opacity = emailInput.value ? 0 : 1;
+            });
+
+            const togglePassword = document.getElementById('togglePassword');
+
+            togglePassword.addEventListener('click', () => {
+                const passwordFields = document.querySelectorAll('.form__input[type="password"]');
+                const type = passwordFields[0].getAttribute('type') === 'password' ? 'text' : 'password';
+
+                passwordFields.forEach((field) => {
+                    field.setAttribute('type', type);
+                });
+
+                togglePassword.classList.toggle('bx-show');
+            });
+
+            document.querySelector('.form__toggle').addEventListener('click', () => {
+                document.querySelector('.l-form').classList.toggle('form__register-mode');
+            });
+        });
+    </script>    
 </body>
 </html>
