--- a/Chatbot.html
+++ b/Chatbot.html
@@ -71,6 +71,7 @@
       }
     }
   </script>
+   <marquee behavior="scroll" direction="left" style="color: #333;">Recuerda esto es un chat simple, si deseas arreglar tus problemas, contáctanos en la ventana de contacto</marquee>
 </body>
 
 </html>
