--- a/resetcontraseña.html
+++ b/resetcontraseña.html
@@ -1,4 +1,5 @@
 <div class="form-container">
+      <link rel="stylesheet" href="style8.css">
       <div class="logo-container">
         Contraseña olvidada?
       </div>
