--- a/inicio.html
+++ b/inicio.html
@@ -766,7 +766,7 @@
       </button>
     </div>
     <div class="package">
-      <h3>1 Página web Personalizada</h3>
+      <h3>1 Página web Personalizada "Gama baja"</h3>
       <p>El contenido de este paquete es una página web personalizada al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente. Tienes un servicio técnico 24/7.</p>
       <p>Precio: 47,43$/45€</p><a href="Pagina%20de%20pago.html"><button class="btn-17">
         <style>
@@ -917,7 +917,7 @@
       </button>
     </div>
     <div class="package">
-      <h3>2 Páginas webs Personalizadas</h3>
+      <h3>1 Página web Personalizada "Gama media"</h3>
       <p>El contenido de este paquete son 2 páginas webs personalizadas al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente. Tienes un servicio técnico 24/7.</p>
       <p>Precio: 79,05$/75€</p><a href="Pagina%20de%20pago.html"><button class="btn-17">
         <style>
@@ -1068,7 +1068,7 @@
       </button>
     </div>
     <div class="package">
-      <h3>3 Páginas webs Personalizadas</h3>
+      <h3>1 Página web Personalizada "Gama alta"</h3>
       <p>El contenido de este paquete son 3 páginas webs personalizadas al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente. Tienes un servicio técnico 24/7.</p>
       <p>Precio: 105,41$/100€</p><a href="Pagina%20de%20pago.html"><button class="btn-17">
         <style>
