--- a/inicio.html
+++ b/inicio.html
@@ -767,7 +767,7 @@
     </div>
     <div class="package">
       <h3>1 Página web Personalizada "Gama baja"</h3>
-      <p>El contenido de este paquete es una página web personalizada al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente. Tienes un servicio técnico 24/7.</p>
+      <p>El contenido de este paquete es una página web personalizada que puede cumplir tus espectativas. La página web que se entrega al cliente está clasificada en la categoría de gama baja, y además garantizamos seguridad en la página web del cliente. Tienes un servicio técnico 24/7.</p>
       <p>Precio: 47,43$/45€</p><a href="Pagina%20de%20pago.html"><button class="btn-17">
         <style>
           .btn-17,
@@ -918,7 +918,7 @@
     </div>
     <div class="package">
       <h3>1 Página web Personalizada "Gama media"</h3>
-      <p>El contenido de este paquete son 2 páginas webs personalizadas al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente. Tienes un servicio técnico 24/7.</p>
+      <p>El contenido de este paquete es 1 página web personalizada al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente. Tienes un servicio técnico 24/7.</p>
       <p>Precio: 79,05$/75€</p><a href="Pagina%20de%20pago.html"><button class="btn-17">
         <style>
           .btn-17,
@@ -1069,7 +1069,7 @@
     </div>
     <div class="package">
       <h3>1 Página web Personalizada "Gama alta"</h3>
-      <p>El contenido de este paquete son 3 páginas webs personalizadas al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente. Tienes un servicio técnico 24/7.</p>
+      <p>El contenido de este paquete es 1 página web personalizada al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama ALTA, y además garantizamos seguridad y hosting en la página web del cliente. Tienes un servicio técnico 24/7.</p>
       <p>Precio: 105,41$/100€</p><a href="Pagina%20de%20pago.html"><button class="btn-17">
         <style>
           .btn-17,
