--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                       
                 </div>
 
-                <a href="#" class="form__toggle" onclick="toggleForms()">Registro</a>
+                <a href="#" class="form__toggle" onclick="toggleForms()">No tienes cuenta?</a>
 
                 <div class="form__social">
                     <span class="form__social-text">Iniciar sesión con</span>
