--- a/Pagina de pago.html
+++ b/Pagina de pago.html
@@ -124,21 +124,21 @@
       </div>
 
       <div class="package">
-        <h3>1 Pagina Web</h3>
+        <h3>1 Pagina Web "Gama baja"</h3>
         <p>El contenido de este paquete es una página web personalizada al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente.Tienes un servicio tecnico 24/7.</p>
         <p>Precio: <span class="price">47,43$/45€</span></p>
         <a href="paypal1web.html" class="buy-now-button">Pagar ahora</a>
       </div>
 
       <div class="package">
-        <h3>2 Paginas Webs</h3>
+        <h3>1 Pagina Web "Gama media"</h3>
         <p>El contenido de este paquete son 2 páginas webs personalizada al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente.Tienes un servicio tecnico 24/7.</p>
         <p>Precio: <span class="price">79,05$/75€</span></p>
         <a href="paypal2web.html" class="buy-now-button">Pagar ahora</a>
       </div>
 
       <div class="package">
-        <h3>3 Paginas Webs</h3>
+        <h3>1 Pagina Web "Gama ALTA"</h3>
         <p>El contenido de este paquete son 3 páginas webs personalizada al detalle, que cumple con todas las especificaciones del cliente. La página web que se entrega al cliente está clasificada en la categoría de gama media, y además garantizamos seguridad en la página web del cliente.Tienes un servicio tecnico 24/7.</p>
         <p>Precio: <span class="price">105,41$/100€</span></p>
         <a href="paypal3web.html" class="buy-now-button">Pagar ahora</a>
@@ -154,7 +154,7 @@
       
       <div class="package">
         <h3>1 Antivirus</h3>
-        <p>El contenido de este paquete incluye 1 antivirus con antitráfico de red, brindando seguridad en el dispositivo al bloquear amenazas y sitios web sospechosos. Además, proporciona mayor seguridad al navegar por internet y un servicio técnico disponible 24/7.</p>
+        <p>El contenido de este paquete incluye 1 antivirus con antitráfico de red, brindando seguridad en el dispositivo al bloquear amenazas y sitios web sospechosos. Además, proporciona mayor seguridad al navegar por internet y un servicio técnico disponible 24/7. El paquete incluye un software personalizado.</p>
         <p>Precio: <span class="price">36,88$/35€</span></p>
         <a href="paypalseguridad.html" class="buy-now-button">Pagar ahora</a>
       </div>
