--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Hugo Sánchez" width="80">
+          <img src="/assets/images/my-avatar.png" alt="Hugo Sánchez" width="80">
         </figure>
 
         <div class="info-content">
@@ -233,7 +233,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
+                <img src="/assets/images/icon-design.svg
                 " alt="design icon" width="40">
               </div>
 
@@ -250,7 +250,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="/assets/images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -266,7 +266,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="/assets/images/icon-app.svg" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
