--- a/portfolio.html
+++ b/portfolio.html
@@ -7,19 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Personal Hugo Sánchez</title>
 
-  <!--
-    - favicon
-  -->
-  <link rel="shortcut icon" href="ArreglosyCiberseguridad/assets/images/logo.ico" type="image/x-icon">
+  
+  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
 
-  <!--
-    - custom css link
-  -->
-  <link rel="stylesheet" href="ArreglosyCiberseguridad/assets/css/style.css">
+  
+  <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!--
-    - google font link
-  -->
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -38,7 +32,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="ArreglosyCiberseguridad/assets/images/my-avatar.png" alt="Hugo Sánchez" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Hugo Sánchez" width="80">
         </figure>
 
         <div class="info-content">
@@ -227,7 +221,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="ArreglosyCiberseguridad/assets/images/icon-design.svg
+                <img src="./assets/images/icon-design.svg
                 " alt="design icon" width="40">
               </div>
 
@@ -244,7 +238,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="ArreglosyCiberseguridad/assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -260,7 +254,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="ArreglosyCiberseguridad/assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -276,7 +270,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="ArreglosyCiberseguridad/assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -306,7 +300,7 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="ArreglosyCiberseguridad/assets/images/avatar-1.png" alt="Daniel" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-1.png" alt="Daniel" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel</h4>
@@ -328,7 +322,7 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="ArreglosyCiberseguridad/assets/images/avatar-2.png" alt="Carmen" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-2.png" alt="Carmen" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Carmen</h4>
