--- a/Contacto.html
+++ b/Contacto.html
@@ -53,17 +53,17 @@
         </div>
   
         <div class="package" onclick="redirectToPago('Pagina de pago.html')">
-            <h2>1 Pagina Web - Ciberseguridad</h2>
+            <h2>1 Pagina Web Gama baja - Ciberseguridad</h2>
             <p>Precio: 47,43$/45€</p>
         </div>
   
         <div class="package" onclick="redirectToPago('Pagina de pago.html')">
-            <h2>2 Paginas webs - Ciberseguridad</h2>
+            <h2>1 Pagina web Gama media - Ciberseguridad</h2>
             <p>Precio: 79,05$/75€</p>
         </div>
   
         <div class="package" onclick="redirectToPago('Pagina de pago.html')">
-            <h2>3 Paginas Webs - Ciberseguridad</h2>
+            <h2>1 Pagina Web Gama alta - Ciberseguridad</h2>
             <p>Precio: 105,41$/100€</p>
         </div>
   
