--- a/inicio.html
+++ b/inicio.html
@@ -858,7 +858,7 @@
     <h2>Paquetes de Compras</h2>
     <div class="package">
       <h3>1 Virus</h3>
-      <p>El contenido de este artículo es un virus destinado a uso personal. Para android. Solo funcionará si lo abres. Además, el paquete incluye un servicio técnico y el producto te llegará al correo electrónico con el que te hayas registrado.</p>
+      <p>El contenido de este artículo es un virus diseñado para uso personal en dispositivos Android, iPhone, PC o portátil "solo windows". Además, el paquete incluye un servicio técnico, y el producto te llegará al correo electrónico con el que te hayas registrado. También puedes especificar la funcionalidad del contenido del virus. "NO NOS HACEMOS RESPONSABLES DEL MAL USO DE ESTA HERRAMIENTA"</p>
       <p>Precio: 30,47$/29€</p><a href="Pagina%20de%20pago.html"><button class="btn-17">
         <span class="text-container">
           <span class="text">Comprar</span>
@@ -867,7 +867,7 @@
     </div>
     <div class="package">
       <h3>2 Virus</h3>
-      <p>El contenido de este artículo son 2 virus destinados a uso personal. Para android o windows. Solo funcionará si lo abres. Además, el paquete incluye un servicio técnico 24/7 y el producto te llegará al correo electrónico con el que te hayas registrado. Envía un correo a la dirección que se le facilita con las especificaciones del producto.</p>
+      <p>El contenido de este artículo son dos virus diseñados para uso personal en dispositivos Android, iPhone, PC o portátil/windows/linux. Además, el paquete incluye un servicio técnico, y el producto te llegará al correo electrónico con el que te hayas registrado. También puedes especificar la funcionalidad de los virus. También incluye un trabajo más profesional con dos virus diferentes a petición del cliente. "NO NOS HACEMOS RESPONSABLES DEL MAL USO DE ESTA HERRAMIENTA"</p>
       <p>Precio: 52,54$/50€</p><a href="Pagina%20de%20pago.html"><button class="btn-17">
         <span class="text-container">
           <span class="text">Comprar</span>
@@ -876,7 +876,7 @@
     </div>
     <div class="package">
       <h3>3 Virus</h3>
-      <p>El contenido de este artículo son 3 virus destinados a uso personal. Para android, windows o linux. Solo funcionará si lo abres. Además, el paquete incluye un servicio técnico 24/7 y el producto te llegará al correo electrónico con el que te hayas registrado. Envía un correo a la dirección que se le facilita con las especificaciones del producto.</p>
+      <p>El contenido de este artículo son 3 virus destinados a uso personal, compatibles con Android, iPhone, Windows o Linux. Además, el paquete incluye un servicio técnico 24/7 y el producto te llegará al correo electrónico con el que te hayas registrado. Envía un correo a la dirección facilitada con las especificaciones del producto, que incluirá un video del funcionamiento del virus, un chat directo con un especialista en este tema y la posibilidad de solicitar cualquier tipo de modificación de los 3 virus, siempre y cuando nuestro equipo pueda realizarlo. "NO NOS HACEMOS RESPONSABLES DEL MAL USO DE ESTA HERRAMIENTA"</p>
       <p>Precio: 104,03$/99€</p><a href="Pagina%20de%20pago.html"><button class="btn-17">
         <span class="text-container">
           <span class="text">Comprar</span>
