--- a/inicio.html
+++ b/inicio.html
@@ -1645,7 +1645,7 @@
     <h2>Productos Destacados</h2>
     <div class="product" onclick="redirectToPago('Pagina%20de%20pago.html')">
       <img src="virus.jpg" alt="Virus">
-      <h3 class="product-title">Virus</h3>
+      <h3 class="product-title">Antivirus</h3>
     </div>
 
     <div class="product" onclick="redirectToPago('Pagina%20de%20pago.html')">
