--- a/inicio.html
+++ b/inicio.html
@@ -1,6 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ArreglosyCiberseguridad</title>
+  <link rel="stylesheet" href="contratostyle.css">
+</head>
+<body>
+  <div class="container">
+    <div id="contrato" class="contrato-oculto">
+      <div id="papel" class="animacion-entrada">
+        <h1 class="animacion-rotacion">Contrato</h1>
+        <p class="animacion-desplazamiento">Al afirmar esto, estás dando tu consentimiento a esta web de que no nos hacemos responsables del mal uso de nuestros productos.</p>
+        <div id="firma" class="animacion-escalado">
+          <img id="boli" src="boli.png" alt="Boli" class="animacion-boli">
+          <div id="firma-espacio" class="animacion-opacidad"></div>
+        </div>
+        <div id="botones" class="animacion-botones">
+          <button id="aceptar" class="boton boton-verde animacion-zoom">Aceptar</button>
+        </div>
+        <div id="mensaje" class="animacion-mensaje"></div>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
+   
 <head>
    <link rel="shortcut icon" type="image/x-icon" href="logo2.png">
   <meta charset="UTF-8">
