--- a/inicio.html
+++ b/inicio.html
@@ -10,6 +10,7 @@
   <title>ArreglosyCiberseguridad</title>
   <link rel="stylesheet" href="contratostyle.css">
 </head>
+  <link rel="shortcut icon" type="image/x-icon" href="logo2.png">
 <body>
   <div class="container">
     <div id="contrato" class="contrato-oculto">
