--- a/paypal2web.html
+++ b/paypal2web.html
@@ -26,7 +26,7 @@
         <p><strong>Fecha:</strong> <span id="fecha"></span></p>
         <p><strong>Hora:</strong> <span id="hora"></span></p>
         <p><strong>Nombre: ArreglosCiberseguridad</strong> <span id="nombre-ticket"></span></p>
-        <p><strong>Precio:</strong> <span id="precio"></span></p>
+        <p><strong>Precio:79,05$/75€</strong> <span id="precio"></span></p>
       </div>
     </div>
   </div>
