--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <input type="password" id="password" class="form__input" required>
                     </div>
                 </div>
-                <a href="#" class="form__forgot">Contraseña olvidada?</a>
+                <a href="resetcontraseña.html" class="form__forgot">Contraseña olvidada?</a>
 
                 <div class="form__buttons">
                     <button class="btn-23">
