--- a/inicio.html
+++ b/inicio.html
@@ -1695,7 +1695,7 @@
   </script>
 
   <footer>
-    <p>Derechos de autor Hugo Sánchez © 2022 Arreglos y Ciberseguridad. Todos los derechos reservados.</p>
+    <p>Derechos de autor Hugo © 2022 Arreglos y Ciberseguridad. Todos los derechos reservados.</p>
     <div class="garantia">
       <marquee>Garantía del producto: Envío en 1 día - 1 semana</marquee>
     </div>
